fixed broken styles for the breadcrumb

--- a/content/2-molecules/6-navigation/4-breadcrumb/styles.css
+++ b/content/2-molecules/6-navigation/4-breadcrumb/styles.css
@@ -37,10 +37,22 @@
 .breadcrumb-list > li > a:after {
   top: 0;
   background: -webkit-linear-gradient(bottom, #555, #555 50%, #000);
+  background: -moz-linear-gradient(bottom, #555, #555 50%, #000);
+  background: -ms-linear-gradient(bottom, #555, #555 50%, #000);
+  background: linear-gradient(bottom, #555, #555 50%, #000);
+  -webkit-transform: rotate(-33.75deg);
+  -moz-transform: rotate(-33.75deg);
+  -ms-transform: rotate(-33.75deg);
   transform: rotate(-33.75deg);
 }
 .breadcrumb-list > li > a:before {
   bottom: 0;
   background: -webkit-linear-gradient(top, #555, #555 50%, #000);
+  background: -moz-linear-gradient(top, #555, #555 50%, #000);
+  background: -ms-linear-gradient(top, #555, #555 50%, #000);
+  background: linear-gradient(top, #555, #555 50%, #000);
+  -webkit-transform: rotate(33.75deg);
+  -moz-transform: rotate(33.75deg);
+  -ms-transform: rotate(33.75deg);
   transform: rotate(33.75deg);
 }
